--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: 안녕! 세딸기들.
+subtitle: 공식 블로그 페이지.
 use-site-title: true
 ---
 
